# DirkEngine-cpp

./: .clang-format  .gitignore  .gitmodules  Build.sh  CMakeLists.txt  CODE_OF_CONDUCT.md  GeneratePojectFiles.sh  Makefile  README.md  Setup.sh  application.cpp  imgui.ini  premake5.lua  test.cpp
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/ISSUE_TEMPLATES/: bug_report.yml  feature_request.yml
Engine/: premake5.lua
Engine/Assets/models/Duck/: Duck.gltf
Engine/Assets/models/viking_room/: viking_room.gltf
Engine/Config/DirkBuildTool/: external.json  settings.json
Engine/Editor/: premake5.lua
Engine/Programs/DirkBuildTool/: main.go
Engine/Programs/DirkBuildTool/Config/: build_configs.json  config.json  dirs.json
Engine/Programs/DirkBuildTool/Source/: main.go
Engine/Programs/DirkBuildTool/Source/config/: config.go  external.go  platform.go  utils.go
Engine/Programs/DirkBuildTool/Source/make/: cpp.go  makefile.go  makefiles.go  shaders.go
Engine/Programs/DirkBuildTool/Source/make/makefiles/: ar_lnk.make  base.make  compilation.make  cxx_lnk.make  shaders.make
Engine/Programs/DirkBuildTool/Source/models/: models.go
Engine/Programs/DirkBuildTool/Source/module/: cpp.go  engine.go  header.go  module.go  shaders.go
Engine/Programs/DirkBuildTool/Source/output/: dirs.go  output.go
Engine/Programs/DirkBuildTool/Source/setup/: setup.go
Engine/Programs/DirkBuildTool/config/: config.go
Engine/Programs/DirkBuildTool/make/: base.make  makefiles.go
Engine/Programs/DirkBuildTool/make/makefiles/: ar_lnk.make  base.make  cxx_lnk.make
Engine/Programs/DirkBuildTool/models/: models.go
Engine/Programs/DirkBuildTool/module/: module.go
Engine/Programs/DirkBuildTool/output/: dirs.go  file.go
Engine/Programs/DirkBuildTool/setup/: setup.go
Engine/Runtime/: premake5.lua
Engine/Runtime/include/core/: globals.hpp
Engine/Runtime/include/engine/: dirkengine.hpp
Engine/Scripts/: DirkBuildTool.sh  Setup.sh
Engine/Shaders/: Shaders.dirkmod
Engine/Shaders/Source/: shader.vert
Engine/Source/: DirkEditor.dirktarget  DirkGame.dirktarget
Engine/Source/Common/: Common.dirkmod
Engine/Source/Common/include/: asserts.hpp  common.hpp
Engine/Source/Common/include/input/: keys.hpp
Engine/Source/Common/include/logging/: logging.hpp
Engine/Source/Common/src/: common.cpp
Engine/Source/Common/src/logging/: logging.cpp
Engine/Source/Core/: Core.dirkmod
Engine/Source/Core/include/: asserts.hpp  core.hpp
Engine/Source/Core/include/Events/: Event.hpp  EventManager.hpp
Engine/Source/Core/include/events/: Event.hpp
Engine/Source/Core/include/input/: Events.hpp  events.hpp  keys.hpp
Engine/Source/Core/src/: core.cpp
Engine/Source/Core/src/Events/: EventManager.cpp
Engine/Source/Core/src/events/: EventManager.cpp
Engine/Source/Editor/: Editor.dirkmod  Makefile
Engine/Source/Editor/src/: entrypoint.cpp
Engine/Source/Entrypoint/: Entrypoint.dirkmod
Engine/Source/Platform/: Platform.dirkmod
Engine/Source/Platform/include/: keys.hpp  window.hpp
Engine/Source/Platform/include/platform/: events.hpp  monitor.hpp  platform.hpp  window.hpp
Engine/Source/Platform/include/platform/linux/: linux.hpp  window.hpp
Engine/Source/Platform/include/window/: platform_window.hpp
Engine/Source/Platform/src/: window.cpp
Engine/Source/Platform/src/linux/: linux.cpp
Engine/Source/Platform/src/platform/: platform.cpp  window.cpp
Engine/Source/Platform/src/platform/linux/: linux.cpp  window.cpp
Engine/Source/Runtime/: Makefile  Runtime.dirkmod
Engine/Source/Runtime/include/core/: globals.hpp  logging.hpp
Engine/Source/Runtime/include/engine/: actor.hpp  dirkengine.hpp  world.hpp
Engine/Source/Runtime/include/input/: input.hpp
Engine/Source/Runtime/include/render/: camera.hpp  render_types.hpp  renderer.hpp  viewport.hpp  vulkan_types.hpp  window.hpp
Engine/Source/Runtime/include/resources/: resource_manager.hpp
Engine/Source/Runtime/src/core/: globals.cpp  logging.cpp
Engine/Source/Runtime/src/engine/: actor.cpp  dirkengine.cpp  world.cpp
Engine/Source/Runtime/src/input/: input.cpp
Engine/Source/Runtime/src/render/: camera.cpp  render_types.cpp  renderer.cpp  viewport.cpp  window.cpp
Engine/Source/Runtime/src/resources/: resource_manager.cpp
Source/: premake5.lua
Source/Runtime/: premake5.lua
Source/Runtime/src/input/: input.cpp
include/: dirkengine.h  globals.hpp  logger.hpp
include/core/: asserts.hpp  globals.hpp  logger.hpp  logging.hpp
include/engine/: actor.hpp  component.hpp  dirkengine.hpp  game.hpp  game_instance.hpp  shaders.hpp
include/input/: keys.hpp
include/render/: camera.hpp  mesh.hpp  render.hpp  render_types.hpp  render_utils.hpp  renderer.hpp  renderer_types.hpp  vulkan.hpp  vulkan_types.hpp  vulkan_utils.hpp
include/render/vulkan/: vulkan.hpp  vulkan_types.hpp  vulkan_utils.hpp
include/resources/: resource_manager.hpp
resources/models/: viking_room.gltf
resources/models/Duck/: Duck.gltf
resources/models/Shrek/: Shrek.gltf
resources/models/viking_room/: viking_room.gltf
shaders/: shader.frag  shader.vert
src/: application.cpp  entrypoint.cpp  logger.cpp  main.cpp
src/core/: globals.cpp  logger.cpp  logging.cpp
src/engine/: actor.cpp  component.cpp  dirkengine.cpp  shaders.cpp  world.cpp
src/render/: camera.cpp  render_types.cpp  render_utils.cpp  renderer.cpp  vulkan.cpp  vulkan_utils.cpp
src/render/vulkan/: vulkan.cpp  vulkan.hpp  vulkan_types.hpp  vulkan_utils.cpp  vulkan_utils.hpp
src/resources/: resource_manager.cpp
